--- a/conf.cfg
+++ b/conf.cfg
@@ -1,7 +1,6 @@
 [AWS]
-AWS_ACCESS_KEY_ID = "AKIAZTUROCAYO7YJ2S57"
-AWS_SECRET_ACCESS_KEY = "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"
+AWS_ACCESS_KEY_ID = 
+AWS_SECRET_ACCESS_KEY = 
 
 [S3]
-SOURCE_S3_BUCKET = ""
-OUTPUT_S3_BUCKET = "source-bucket-capstone"
+OUTPUT_S3_BUCKET =
